@@ -1,31 +1,24 @@
 require File.dirname(__FILE__) + '/../../test_helper'
 
 class RemotePaymentExpressTest < Test::Unit::TestCase
-  LOGIN = 'LOGIN'
-  PASSWORD = 'PASSWORD'
-  
+
   def setup
     @gateway = PaymentExpressGateway.new(fixtures(:payment_express))
     
-    @creditcard = credit_card('4111111111111111')
+    @credit_card = credit_card
 
     @options = { 
-      :billing_address => { 
-        :name => 'Cody Fauser',
-        :address1 => '1234 Shady Brook Lane',
-        :city => 'Ottawa',
-        :state => 'ON',
-        :country => 'CA',
-        :zip => '90210',
-        :phone => '555-555-5555'
-      },
-     :email => 'cody@example.com',
-     :description => 'Store purchase'
+      :order_id => generate_order_id,
+      :billing_address => address,
+      :email => 'cody@example.com',
+      :description => 'Store purchase'
     }
+    
+    @amount = 100
   end
   
   def test_successful_purchase
-    assert response = @gateway.purchase(100, @creditcard, @options)
+    assert response = @gateway.purchase(@amount, @credit_card, @options)
     assert_equal "APPROVED", response.message
     assert_success response
     assert response.test?
@@ -33,8 +26,7 @@ class RemotePaymentExpressTest < Test::Unit::TestCase
   end
   
   def test_successful_purchase_with_reference_id
-    @options[:order_id] = rand(100000)
-    assert response = @gateway.purchase(100, @creditcard, @options)
+    assert response = @gateway.purchase(@amount, @credit_card, @options)
     assert_equal "APPROVED", response.message
     assert_success response
     assert response.test?
@@ -42,14 +34,14 @@ class RemotePaymentExpressTest < Test::Unit::TestCase
   end
   
   def test_declined_purchase
-    assert response = @gateway.purchase(176, @creditcard, @options)
+    assert response = @gateway.purchase(176, @credit_card, @options)
     assert_equal 'DECLINED', response.message
     assert_failure response
     assert response.test?
   end
   
   def test_successful_authorization
-    assert response = @gateway.authorize(100, @creditcard, @options)
+    assert response = @gateway.authorize(@amount, @credit_card, @options)
     assert_equal "APPROVED", response.message
     assert_success response
     assert response.test?
@@ -57,18 +49,17 @@ class RemotePaymentExpressTest < Test::Unit::TestCase
   end
 
   def test_authorize_and_capture
-    amount = 100
-    assert auth = @gateway.authorize(amount, @creditcard, @options)
+    assert auth = @gateway.authorize(@amount, @credit_card, @options)
     assert_success auth
     assert_equal 'APPROVED', auth.message
     assert auth.authorization
-    assert capture = @gateway.capture(amount, auth.authorization)
+    assert capture = @gateway.capture(@amount, auth.authorization)
     assert_success capture
   end
   
   def test_purchase_and_credit
     amount = 10000
-    assert purchase = @gateway.purchase(amount, @creditcard, @options)
+    assert purchase = @gateway.purchase(amount, @credit_card, @options)
     assert_success purchase
     assert_equal 'APPROVED', purchase.message
     assert !purchase.authorization.blank?
@@ -77,7 +68,7 @@ class RemotePaymentExpressTest < Test::Unit::TestCase
   end
   
   def test_failed_capture
-    assert response = @gateway.capture(100, '999')
+    assert response = @gateway.capture(@amount, '999')
     assert_failure response
     assert_equal 'IVL DPSTXNREF', response.message
   end
@@ -87,13 +78,13 @@ class RemotePaymentExpressTest < Test::Unit::TestCase
       :login => '',
       :password => ''
     )
-    assert response = gateway.purchase(100, @creditcard, @options)
+    assert response = gateway.purchase(@amount, @credit_card, @options)
     assert_equal 'Invalid Credentials', response.message
     assert_failure response
   end
   
   def test_store_credit_card
-    assert response = @gateway.store(@creditcard)
+    assert response = @gateway.store(@credit_card)
     assert_success response
     assert_equal "APPROVED", response.message
     assert !response.token.blank?
@@ -102,7 +93,7 @@ class RemotePaymentExpressTest < Test::Unit::TestCase
   
   def test_store_with_custom_token
     token = Time.now.to_i.to_s #hehe
-    assert response = @gateway.store(@creditcard, :billing_id => token)
+    assert response = @gateway.store(@credit_card, :billing_id => token)
     assert_success response
     assert_equal "APPROVED", response.message
     assert !response.token.blank?
@@ -111,26 +102,25 @@ class RemotePaymentExpressTest < Test::Unit::TestCase
   end
   
   def test_store_invalid_credit_card
-    original_number = @creditcard.number
-    @creditcard.number = 2
+    original_number = @credit_card.number
+    @credit_card.number = 2
   
-    assert response = @gateway.store(@creditcard)
+    assert response = @gateway.store(@credit_card)
     assert_failure response
   ensure
-    @creditcard.number = original_number
+    @credit_card.number = original_number
   end
   
   def test_store_and_charge
-    assert response = @gateway.store(@creditcard)
+    assert response = @gateway.store(@credit_card)
     assert_success response
     assert_equal "APPROVED", response.message
     assert (token = response.token)
     
-    assert purchase = @gateway.purchase( 100, token)
+    assert purchase = @gateway.purchase( @amount, token)
     assert_equal "APPROVED", purchase.message
     assert_success purchase
     assert_not_nil purchase.authorization
   end  
-  
   
 end
